--- a/style.css
+++ b/style.css
@@ -1,62 +1,12 @@
-#graph-container {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    height: 750px;
-    max-height: 90vh;
-    overflow: hidden;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.flex-column {
-    display: flex;
-    gap: 5px;
-    flex-direction: column;
-}
-
-.flow-row {
-    display: flex;
-    flex-direction: row;
-}
-
-#toolbar {
-    padding: 10px;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    overflow-x: scroll;
-    scrollbar-width: none;
-    flex-wrap: nowrap;
-    white-space: nowrap;
-    row-gap: 10px;
-}
-
-#toolbar::-webkit-scrollbar {
-    display: none;
-}
-
-#toolbar button {
-  background-image: linear-gradient(#f7f8fa ,#e7e9ec);
-  border-color: #adb1b8 #a2a6ac #8d9096;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 3px;
-  box-shadow: rgba(255,255,255,.6) 0 1px 0 inset;
-  box-sizing: border-box;
-  color: #0f1111;
-  cursor: pointer;
-  display: inline-block;
-  font-family: "Amazon Ember",Arial,sans-serif;
-  font-size: 14px;
-  height: 29px;
-  font-size: 13px;
-  outline: 0;
-  overflow: hidden;
-  padding: 0 11px;
-  text-align: center;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  white-space: nowrap;
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 #toolbar button:active {
@@ -101,36 +51,37 @@ body td.mxPopupMenuItem {
   font-size: 10pt;
   user-select: none;
 }
+
 body td.mxPopupMenuIcon {
   background-color: white;
   padding: 0px;
 }
+
 body tr.mxPopupMenuItemHover {
   background-color: #eeeeee;
   color: black;
 }
+
 table.mxPopupMenu hr {
   border-top: solid 1px #cccccc;
 }
+
 table.mxPopupMenu tr {
   font-size: 4pt;
 }
 
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
+@layer utilities {
 
-#toolbox {
-  border: #ccc 1px solid;
-  display: flex;
-  padding: 5px;
-  margin-right: 5px;
-}
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-#properties-mananger {
-  border: #ccc 1px solid;
-  display: flex;
-  padding: 5px;
-  margin-left: 5px;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
 }
