--- a/style.css
+++ b/style.css
@@ -9,6 +9,33 @@ body {
   margin: 0;
 }
 
+/* nice default button */
+
+button {
+  padding: 5px 10px;
+  border: 1px solid #a2a6ac;
+  border-radius: 5px;
+  background: #f5f5f5;
+  color: #333;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0;
+  user-select: none;
+
+}
+
+button:hover {
+  background: #e7e7e7;
+}
+
+button:active {
+  background: #d9d9d9;
+}
+
 #toolbar button:active {
   border-bottom-color: #a2a6ac;
 }
